--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rc": "~0.5.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
-    "sails-hook-autoreload": "^0.11.2"
+    "sails-hook-autoreload": "^0.11.2",
+    "supertest": "^1.0.1"
   },
   "scripts": {
     "start": "node app.js",
