--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/sails-angular.git"
+    "url": "git://github.com/danymar24/sails-angular.git"
   },
-  "author": "anonymous node/sails user",
+  "author": "Daniel Rodriguez",
   "license": ""
 }
